refactor all + tests + db on docker